--- a/setup.ipynb
+++ b/setup.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from codes.python import load_mitdb,ECG_denoising\n",
-    "from codes.python import simple_heartbeat_segmentation as shs\n"
+    "from codes.python import simple_heartbeat_segmentation as shs\n",
+    "import numpy as np\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -22,8 +23,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\chont\\OneDrive\\Documents\\GitHub\\ECGdataAnalysis/database/mitdb/csv/100.csv\n",
-      "C:\\Users\\chont\\OneDrive\\Documents\\GitHub\\ECGdataAnalysis/database/mitdb/csv/100.txt\n"
+      "C:\\Users\\nimch681\\Documents\\git_projects\\ECGdataAnalysis/database/mitdb/csv/100.csv\n",
+      "C:\\Users\\nimch681\\Documents\\git_projects\\ECGdataAnalysis/database/mitdb/csv/100.txt\n"
      ]
     },
     {
@@ -56,17 +57,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "filter_ecg = ECG_denoising.ECG_FIR_filter()\n",
     "mit100.filtered_MLII = ECG_denoising.denoising_signal_FIR(mit100.MLII,filter_ecg)\n",
     "mit100.filtered_V1 = ECG_denoising.denoising_signal_FIR(mit100.V1,filter_ecg)\n",
-    "mit100.segmented_beat_1, mit100.segmented_class_ID, mit100.segmented_beat_class, mit100.segmented_R_pos, mit100.segmented_R_pos, mit100.segmented_original_R  = shs.segment_beat(mit100.filtered_MLII, mit100.time, mit100.annotations, 90, 90)\n",
-    "print(mit100.segmented_beat_1)\n",
+    "mit100.segmented_beat_1, mit100.segmented_class_ID, mit100.segmented_beat_class, mit100.segmented_R_pos, mit100.segmented_valid_R, mit100.segmented_original_R  = shs.segment_beat(mit100.filtered_MLII, mit100.time, mit100.annotations, 90, 90)\n",
+    "#print(mit100.segmented_beat_1)\n",
     "#load_mitdb.display_signal(mit100.beat_1[0])\n",
-    "#load_mitdb.display_signal(mit100.beat_1[2])"
+    "#load_mitdb.display_signal(mit100.beat_1[2])\n",
+    "MLII = mit100.MLII\n",
+    "np100_MLII = np.array(mit100.segmented_beat_1)\n",
+    "\n",
+    "np100R = np.array(mit100.segmented_original_R)\n",
+    "np_r_poses = np.array(mit100.segmented_R_pos)\n",
+    "np_valid_r = np.array(mit100.segmented_valid_R)\n",
+    "#np100R = np.append(np100R, np_r_poses, axis=1)\n",
+    "np100R = np.column_stack((np100R, np_r_poses))\n",
+    "np100R = np.column_stack((np100R, np_valid_r))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2274, 5)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np100R.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.80000000e+01, -1.12634088e-02,  1.80000000e+01, -1.12634088e-02,\n",
+       "        0.00000000e+00])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np100R[0]"
    ]
   },
   {
