--- a/Q and S peaks algorithm detection.ipynb
+++ b/Q and S peaks algorithm detection.ipynb
@@ -4505,7 +4505,9 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
