changed some stuffs

--- a/tests.ipynb
+++ b/tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,9 +521,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 0\n",
+      "101 1\n",
+      "102 2\n",
+      "103 3\n",
+      "104 4\n",
+      "105 5\n",
+      "106 6\n",
+      "107 7\n",
+      "108 8\n",
+      "109 9\n",
+      "111 10\n",
+      "112 11\n",
+      "113 12\n",
+      "114 13\n",
+      "115 14\n",
+      "116 15\n",
+      "117 16\n",
+      "118 17\n",
+      "119 18\n",
+      "121 19\n",
+      "122 20\n",
+      "123 21\n",
+      "124 22\n",
+      "200 23\n",
+      "201 24\n",
+      "202 25\n",
+      "203 26\n",
+      "205 27\n",
+      "207 28\n",
+      "208 29\n",
+      "209 30\n",
+      "210 31\n",
+      "212 32\n",
+      "213 33\n",
+      "214 34\n",
+      "215 35\n",
+      "217 36\n",
+      "219 37\n",
+      "220 38\n",
+      "221 39\n",
+      "222 40\n",
+      "223 41\n",
+      "228 42\n",
+      "230 43\n",
+      "231 44\n",
+      "232 45\n",
+      "233 46\n",
+      "234 47\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(0,len(mitdb.patient_records)):\n",
     "    print(mitdb.patient_records[i].filename, i)\n",
@@ -909,7 +964,7 @@
     "\n",
     "\n",
     "\n",
-    "    \n",
+    "\n",
     "\n",
     "    \n",
     "\n"
@@ -917,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -981,9 +1036,7 @@
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 105. r_peak: 472830\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 105. r_peak: 472868\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 105. r_peak: 478918\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 105. r_peak: 478949\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:110: UserWarning: the later q point is in the range of the  current q_point. File name: 105. r_peak: 595432\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:108: UserWarning: the current q point is not in the range current  pre_r . File name: 105. r_peak: 595482\n"
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 105. r_peak: 478949\n"
      ]
     },
     {
@@ -999,6 +1052,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:110: UserWarning: the later q point is in the range of the  current q_point. File name: 105. r_peak: 595432\n",
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:108: UserWarning: the current q point is not in the range current  pre_r . File name: 105. r_peak: 595482\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 108. r_peak: 280501\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 108. r_peak: 280515\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:110: UserWarning: the later q point is in the range of the  current q_point. File name: 108. r_peak: 334192\n",
@@ -1154,30 +1209,16 @@
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 215. r_peak: 64520\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 215. r_peak: 64556\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 215. r_peak: 443163\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 215. r_peak: 443185\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "217 36\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 215. r_peak: 443185\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:42: UserWarning: height equal to 0 number is greater then 20 in 217 record with 0 height number of [42]\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:71: UserWarning: durations equal to 0 number is greater then 20 in 217 record with 0 durations number of [39]\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:42: UserWarning: height equal to 0 number is greater then 20 in 219 record with 0 height number of [22]\n",
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:71: UserWarning: durations equal to 0 number is greater then 20 in 219 record with 0 durations number of [21]\n"
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:71: UserWarning: durations equal to 0 number is greater then 20 in 217 record with 0 durations number of [39]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "217 36\n",
       "219 37\n"
      ]
     },
@@ -1185,6 +1226,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:42: UserWarning: height equal to 0 number is greater then 20 in 219 record with 0 height number of [22]\n",
+      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:71: UserWarning: durations equal to 0 number is greater then 20 in 219 record with 0 durations number of [21]\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:122: UserWarning: the current S point is not in the range current  post_r . File name: 219. r_peak: 437726\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:131: UserWarning: the current s point is greater than the later s_point. File name: 219. r_peak: 437726\n",
       "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:128: UserWarning: the former s point is in the range of the  current s_point. File name: 219. r_peak: 437753\n",
@@ -1672,7 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2083,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,7 +2249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2231,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2312,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -2352,36 +2395,7 @@
       "Patient file:  116 begins\n",
       "Patient file:  117 begins\n",
       "Patient file:  118 begins\n",
-      "Patient file:  119 begins\n",
-      "Patient file:  121 begins\n",
-      "Patient file:  122 begins\n",
-      "Patient file:  123 begins\n",
-      "Patient file:  124 begins\n",
-      "Patient file:  200 begins\n",
-      "Patient file:  201 begins\n",
-      "Patient file:  202 begins\n",
-      "Patient file:  203 begins\n",
-      "Patient file:  205 begins\n",
-      "Patient file:  207 begins\n",
-      "Patient file:  208 begins\n",
-      "Patient file:  209 begins\n",
-      "Patient file:  210 begins\n",
-      "Patient file:  212 begins\n",
-      "Patient file:  213 begins\n",
-      "Patient file:  214 begins\n",
-      "Patient file:  215 begins\n",
-      "Patient file:  217 begins\n",
-      "Patient file:  219 begins\n",
-      "Patient file:  220 begins\n",
-      "Patient file:  221 begins\n",
-      "Patient file:  222 begins\n",
-      "Patient file:  223 begins\n",
-      "Patient file:  228 begins\n",
-      "Patient file:  230 begins\n",
-      "Patient file:  231 begins\n",
-      "Patient file:  232 begins\n",
-      "Patient file:  233 begins\n",
-      "Patient file:  234 begins\n"
+      "Patient file:  119 begins\n"
      ]
     }
    ],
@@ -2442,127 +2456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Patient file:  100 begins\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chont\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:131: DeprecationWarning: elementwise == comparison failed; this will raise an error in the future.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2271 2271 2271 2271 2271\n",
-      "Patient file:  101 begins\n",
-      "1872 1872 1872 1872 1872\n",
-      "Patient file:  102 begins\n",
-      "2189 2189 2189 2189 2189\n",
-      "Patient file:  103 begins\n",
-      "2089 2089 2089 2089 2089\n",
-      "Patient file:  104 begins\n",
-      "2308 2308 2308 2308 2308\n",
-      "Patient file:  105 begins\n",
-      "2690 2690 2690 2690 2690\n",
-      "Patient file:  106 begins\n",
-      "2097 2097 2097 2097 2097\n",
-      "Patient file:  107 begins\n",
-      "2138 2138 2138 2138 2138\n",
-      "Patient file:  108 begins\n",
-      "1822 1822 1822 1822 1822\n",
-      "Patient file:  109 begins\n",
-      "2532 2532 2532 2532 2532\n",
-      "Patient file:  111 begins\n",
-      "2132 2132 2132 2132 2132\n",
-      "Patient file:  112 begins\n",
-      "2547 2547 2547 2547 2547\n",
-      "Patient file:  113 begins\n",
-      "1793 1793 1793 1793 1793\n",
-      "Patient file:  114 begins\n",
-      "1889 1889 1889 1889 1889\n",
-      "Patient file:  115 begins\n",
-      "1959 1959 1959 1959 1959\n",
-      "Patient file:  116 begins\n",
-      "2419 2419 2419 2419 2419\n",
-      "Patient file:  117 begins\n",
-      "1537 1537 1537 1537 1537\n",
-      "Patient file:  118 begins\n",
-      "2299 2299 2299 2299 2299\n",
-      "Patient file:  119 begins\n",
-      "2093 2093 2093 2093 2093\n",
-      "Patient file:  121 begins\n",
-      "1873 1873 1873 1873 1873\n",
-      "Patient file:  122 begins\n",
-      "2476 2476 2476 2476 2476\n",
-      "Patient file:  123 begins\n",
-      "1517 1517 1517 1517 1517\n",
-      "Patient file:  124 begins\n",
-      "1632 1632 1632 1632 1632\n",
-      "Patient file:  200 begins\n",
-      "2790 2790 2790 2790 2790\n",
-      "Patient file:  201 begins\n",
-      "2037 2037 2037 2037 2037\n",
-      "Patient file:  202 begins\n",
-      "2145 2145 2145 2145 2145\n",
-      "Patient file:  203 begins\n",
-      "3105 3105 3105 3105 3105\n",
-      "Patient file:  205 begins\n",
-      "2670 2670 2670 2670 2670\n",
-      "Patient file:  207 begins\n",
-      "2383 2383 2383 2383 2383\n",
-      "Patient file:  208 begins\n",
-      "3037 3037 3037 3037 3037\n",
-      "Patient file:  209 begins\n",
-      "3050 3050 3050 3050 3050\n",
-      "Patient file:  210 begins\n",
-      "2682 2682 2682 2682 2682\n",
-      "Patient file:  212 begins\n",
-      "2761 2761 2761 2761 2761\n",
-      "Patient file:  213 begins\n",
-      "3291 3291 3291 3291 3291\n",
-      "Patient file:  214 begins\n",
-      "2294 2294 2294 2294 2294\n",
-      "Patient file:  215 begins\n",
-      "3397 3397 3397 3397 3397\n",
-      "Patient file:  217 begins\n",
-      "2279 2279 2279 2279 2279\n",
-      "Patient file:  219 begins\n",
-      "2312 2312 2312 2312 2312\n",
-      "Patient file:  220 begins\n",
-      "2066 2066 2066 2066 2066\n",
-      "Patient file:  221 begins\n",
-      "2461 2461 2461 2461 2461\n",
-      "Patient file:  222 begins\n",
-      "2631 2631 2631 2631 2631\n",
-      "Patient file:  223 begins\n",
-      "2641 2641 2641 2641 2641\n",
-      "Patient file:  228 begins\n",
-      "2139 2139 2139 2139 2139\n",
-      "Patient file:  230 begins\n",
-      "2464 2464 2464 2464 2464\n",
-      "Patient file:  231 begins\n",
-      "2008 2008 2008 2008 2008\n",
-      "Patient file:  232 begins\n",
-      "1815 1815 1815 1815 1815\n",
-      "Patient file:  233 begins\n",
-      "3149 3149 3149 3149 3149\n",
-      "Patient file:  234 begins\n",
-      "2762 2762 2762 2762 2762\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "all_height_p = []\n",
